<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.activity.DashboardActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_cadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastro"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_extrato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_extrato"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/button_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_sair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sair"
        android:textSize="18sp"
        android:padding="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>