<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.activity.CadastroActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar Nova Transação"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tipo_operacao"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <RadioGroup
        android:id="@+id/radioGroup_tipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/radio_debito"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_tipo">

        <RadioButton
            android:id="@+id/radio_debito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Débito (Gasto)"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/radio_credito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crédito (Ganho)" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup_tipo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_descricao"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_descricao">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_valor"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_valor" />

</androidx.constraintlayout.widget.ConstraintLayout>